tests/compilefail86.out
[1mtests/compilefail86.pas:4:5: [0m[1m[91merror:[0m While statements must be followed by Boolean Expressions: 
     4 | 	while 4 do writeln('yes');
	
