tests/compilefail86.pas
program compilefail86(output);
{In Pascal, only boolean expressions can follow a while.}
begin
	while 4 do writeln('yes');
end.	
